<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/edit_profile"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:elevation="10dp"
            app:cardCornerRadius="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/userImage"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/no_user_img"
                    app:riv_corner_radius="15dp" />

                <TextView
                    android:id="@+id/tvAddImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp"
                    android:text="@string/update_profile_picture"
                    android:textAppearance="?attr/textAppearanceBodySmall"
                    android:textColor="?attr/colorPrimary" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/user_name"
                    android:textAppearance="?attr/textAppearanceBodySmall"
                    android:textColor="?attr/colorPrimary" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_fullname"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_full_name"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/baseline_edit_24">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtUserName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:textColor="@color/lavender"
                        android:textCursorDrawable="@null" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/materialDivider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/enter_email"
                    android:textAppearance="?attr/textAppearanceBodySmall"
                    android:textColor="?attr/colorPrimary" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_email"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtUserEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/lavender"
                        android:textCursorDrawable="@null" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </ScrollView>


    <Button
        android:id="@+id/btnSave"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/save"
        app:icon="@drawable/ic_baseline_save_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/scrollView3" />


</androidx.constraintlayout.widget.ConstraintLayout>

